nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  namespace: dev
  labels:
    app: hello-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: echoserver
        image: k8s.gcr.io/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: dev
spec:
  type: NodePort
  selector:
    app: hello-node
  ports:
  - protocol: TCP
    port: 8080       # service port
    targetPort: 8080 # container port
    nodePort: 30000
